--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth-kit/react-router": "^3.1.3",
+    "@studio-freight/react-lenis": "^0.0.46",
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-auth-kit": "^3.1.3",
