--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "@auth-kit/react-router": "^3.1.3",
-    "@studio-freight/react-lenis": "^0.0.46",
     "@hookform/resolvers": "^3.3.4",
+    "@studio-freight/react-lenis": "^0.0.46",
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-auth-kit": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.22.3",
+    "swiper": "^11.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
