--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 VITE_BASE_URL='https://volunteering.onrender.com/api/v1'
+VITE_BASE_URL_IMG='https://res.cloudinary.com/dglmz8cas/image/upload/v1711627466/'
+# VITE_BASE_URL='http://localhost:5000/api/v1'
+# VITE_BASE_URL_IMG='http://localhost:5000/'
