--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^3.3.4",
     "@studio-freight/react-lenis": "^0.0.46",
+    "@vercel/analytics": "^1.2.2",
     "axios": "^1.6.8",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
@@ -24,9 +25,9 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.22.3",
-    "swiper": "^11.0.7",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
+    "swiper": "^11.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
