--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@studio-freight/react-lenis": "^0.0.46",
     "@vercel/analytics": "^1.2.2",
     "axios": "^1.6.8",
+    "flowbite": "^2.3.0",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-auth-kit": "^3.1.3",
