--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.7.18",
     "@hookform/resolvers": "^3.3.4",
     "@studio-freight/react-lenis": "^0.0.46",
     "@vercel/analytics": "^1.2.2",
     "axios": "^1.6.8",
-    "flowbite": "^2.3.0",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-auth-kit": "^3.1.3",
